--- a/index.html
+++ b/index.html
@@ -846,6 +846,16 @@
   <script src="js/index.js"></script>
 
   <script>
+    $(document).ready(function () {
+      wiedemann_data_parser.jqFetch('js/events.json', function (data) {
+        window.wiedemann_calendar_widget = new WIEDEMANN_CALENDAR_WIDGET({
+          widget: 'calendar-widget',
+          defaultState: {
+            eventID: '3'
+          }
+        }).init(data)
+      })
+    })
   </script>
 </body>
 
