--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>ICG Group</title>
-
   <link rel="stylesheet" href="css/normalize.css">
   <link href="css/datepicker.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/main.css">
-
 </head>
-
 <body>
-
   <div class="wrapper main-page">
-
+    <!-- header -->
     <header class="header">
-
       <div class="container">
-
         <div class="header__menu">
           <div class="header__burger">
-
           </div>
-
           <div class="header__popup">
-
             <div class="header__wrapper">
               <a href="#" class="header__close">
-
               </a>
-
               <nav class="header__nav">
                 <ul class="header__list">
                   <li class="header__item">
@@ -63,12 +51,10 @@
                   </li>
                 </ul>
               </nav>
-
               <div class="header__contacts">
                 <div class="header__text">
                   ICG В СОЦИАЛЬНЫХ СЕТЯХ
                 </div>
-
                 <ul class="header__social-list">
                   <li class="header__social header__social--vk">
                     <a href="#"></a>
@@ -81,9 +67,7 @@
                   </li>
                 </ul>
               </div>
-
             </div>
-
           </div>
         </div>
         <div class="header__logo">
@@ -113,10 +97,8 @@
             </li>
           </ul>
         </div>
-
         <div class="header__search">
           <div class="search__icon">
-
           </div>
           <div class="search__popup">
             <form action="" class="search__form">
@@ -126,18 +108,14 @@
           </div>
         </div>
       </div>
-
     </header>
-
+    <!-- banner -->
     <section class="banner">
-
       <div class="container">
-
         <div class="banner__left">
           <div class="banner__top">
             INTERNATIONAL COSMETIC GROUP
           </div>
-
           <h1 class="banner__title">
             КОМПЛЕКСНОЕ
             ОСНАЩЕНИЕ
@@ -145,11 +123,9 @@
             МЕДИЦИНСКИХ И
             SPA ЦЕНТРОВ.
           </h1>
-
           <div class="banner__link">
             <a href="#">Связаться с нами</a>
           </div>
-
           <div class="banner__contacts">
             <ul class="contacts__list">
               <li class="contacts__item contacts__item--vk">
@@ -164,47 +140,29 @@
             </ul>
           </div>
         </div>
-
         <div class="banner__slider">
-
           <div class="banner__wrapper owl-carousel">
             <img src="img/chair.png" srcset="img/chair@2x.png 900w, img/chair@3x.png 1200w" alt="">
             <img src="img/chair.png" srcset="img/chair@2x.png 900w, img/chair@3x.png 1200w" alt="">
-
-
           </div>
-
-
         </div>
-
       </div>
-
       <div class="banner__right">
-
         <div class="banner--blue">
           <div class="banner__name">
             ICG GROUP
           </div>
-
           <div class="banner__head">
             Перейти в наш магазин
           </div>
-
           <div class="banner__link banner__link--white">
             <a href="#">За покупками</a>
           </div>
         </div>
-
-
-
-
       </div>
-
-
     </section>
-
+    <!-- brands -->
     <section class="brends">
-
       <div class="container">
         <ul class="brends__list owl-carousel">
           <li class="brends__item">
@@ -232,18 +190,20 @@
             <a href="#" class="brends__link--mobile"><img src="img/icons/mobile-brend.svg" alt=""></a>
           </li>
         </ul>
-
+      </div>
+    </section>
+    <!-- services -->
+    <section class="services">
+      <div class="container">
         <ul class="service__list">
           <li class="service__item">
             <div class="service__title">
               Эстетическая медицина
             </div>
-
             <div class="service__info">
               <div class="service__text">
                 lonto, llooda, Proffilers
               </div>
-
               <div class="service__everything">
                 <a href="" class="service__line">
                   Все разделы
@@ -258,24 +218,19 @@
                   Филлеры
                 </a>
               </div>
-
               <a href="" class="banner__link banner__link--small">
                 Узнать больше
               </a>
             </div>
-
           </li>
-
           <li class="service__item">
             <div class="service__title">
               Косметика и оборудование для педикюра
             </div>
-
             <div class="service__info">
               <div class="service__text">
                 Suda
               </div>
-
               <div class="service__everything">
                 <a href="" class="service__line">
                   Все разделы
@@ -287,25 +242,20 @@
                   Косметика
                 </a>
               </div>
-
               <a href="" class="banner__link banner__link--small">
                 Узнать больше
               </a>
             </div>
-
           </li>
-
           <div class="service__divider"></div>
           <li class="service__item">
             <div class="service__title">
               Перманентный макияж
             </div>
-
             <div class="service__info">
               <div class="service__text">
                 My Style
               </div>
-
               <div class="service__everything">
                 <a href="" class="service__line">
                   Все разделы
@@ -317,24 +267,19 @@
                   Расходные материалы
                 </a>
               </div>
-
               <a href="" class="banner__link banner__link--small">
                 Узнать больше
               </a>
             </div>
-
           </li>
-
           <li class="service__item">
             <div class="service__title">
               Профессиональная косметика, велнесс и спа
             </div>
-
             <div class="service__info">
               <div class="service__text">
                 Bernard Cassiere, lonto
               </div>
-
               <div class="service__everything">
                 <a href="" class="service__line">
                   Все разделы
@@ -346,32 +291,23 @@
                   Косметика
                 </a>
               </div>
-
               <a href="" class="banner__link banner__link--small">
                 Узнать больше
               </a>
             </div>
-
-
           </li>
         </ul>
       </div>
-
-
-
     </section>
-
+    <!-- about -->
     <section class="about">
-
       <div class="container">
         <div class="main-title">
           О компании
         </div>
-
         <div class="about__info">
           <img src="img/info@2x.png" alt="">
         </div>
-
         <ul class="about__list">
           <li class="about__item">
             <div class="about__number">
@@ -384,7 +320,6 @@
               года<br> на рынке
             </div>
           </li>
-
           <li class="about__item">
             <div class="about__number">
               100+
@@ -396,7 +331,6 @@
               диллеров<br> работают с нами
             </div>
           </li>
-
           <li class="about__item">
             <div class="about__number">
               7000+
@@ -408,7 +342,6 @@
               оснащенных салонов<br> и медицинских центров
             </div>
           </li>
-
           <li class="about__item">
             <div class="about__number">
               14 000
@@ -422,15 +355,7 @@
           </li>
         </ul>
       </div>
-
     </section>
-
-
-
-
-
-
-
     <!-- courses -->
     <section class="courses">
       <div class="container">
@@ -485,51 +410,33 @@
                     sit amet eget eros. Sed laoreet posuere
                     velit sit amet varius. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </div>
-
                   <div class="banner__link banner__link--small">
                     <a href="#" data-entity="event-url">Подробнее</a>
                   </div>
-
                   <div class="courses__signup">
-
                     <div class="courses__text">
                       Записаться на курс
                     </div>
-
                     <a href="#" class="courses__link">+7 495 229 37 70</a>
                     <a href="#" class="courses__link courses__link--phone"></a>
                     <a href="#" class="courses__link courses__link--whatsapp"></a>
                   </div>
                 </div>
-
                 <div class="courses__calendar owl-carousel" data-entity="event-calendar">
-
                   <!-- <div class="datepicker-here" data-range="false"></div> -->
-
-
                 </div>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- /courses -->
-
-
-
-
-
-
     <section class="factory">
-
       <div class="container">
-
         <div class="main-title">
           Собственное производство
         </div>
-
         <div class="factory__photo">
           <img src="img/bg-photo.jpg" srcset="img/bg-photo@2x.jpg 900w, img/bg-photo@3x.jpg 1200w" alt="">
         </div>
@@ -537,7 +444,6 @@
           <div class="factory__title">
             ICG-МЕБЕЛЬ
           </div>
-
           <div class="factory__text">
             Основана в 2004 году, как одно из подразделений холдинга
             ICG. Специализация компании— производство мебели для
@@ -553,242 +459,165 @@
             парикмахерской, маникюрного зала, спа-салона — лучшие на
             российском рынке.
           </div>
-
           <div class="banner__link banner__link--white">
             <a href="#">Подробнее</a>
           </div>
         </div>
-
       </div>
-
     </section>
-
+    <!-- news -->
     <section class="news">
-
       <div class="container">
         <div class="main-title">
           Новости и события
         </div>
-
-
       </div>
-
       <div class="news__time">
         <div class="news__month"><a href="#">Май</a></div>
         <div class="news__month news__month--active"><a href="#">Июнь</a></div>
         <div class="news__month"><a href="#">Июль</a></div>
         <div class="news__month"><a href="#">Август</a></div>
       </div>
-
       <div class="news__container">
         <div class="container">
-
-
-
           <div class="news__outer">
-
             <div class="news__scroll owl-carousel">
-
               <a href="" class="news__item">
-
                 <div class="news__img">
                   <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
                 </div>
-
                 <div class="news__date">
                   7 MAY 2015
                 </div>
-
                 <div class="news__title">
                   Weekend plans
                 </div>
-
                 <div class="news__text">
                   It’s nearly friday and we’re already planning
                   for the weekend… start with waffles
                 </div>
-
               </a>
-
               <a href="" class="news__item">
-
                 <div class="news__img">
                   <img src="img/new2.jpg" srcset="img/new2@2x.jpg 900w, img/new2@3x.jpg 1200w" alt="">
                 </div>
-
                 <div class="news__date">
                   7 MAY 2015
                 </div>
-
                 <div class="news__title">
                   Weekend plans
                 </div>
-
                 <div class="news__text">
                   It’s nearly friday and we’re already planning
                   for the weekend… start with waffles
                 </div>
-
               </a>
-
-
-
               <a href="" class="news__item">
-
                 <div class="news__img">
                   <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
                 </div>
-
                 <div class="news__date">
                   7 JUN 2015
                 </div>
-
                 <div class="news__title">
                   Weekend plans
                 </div>
-
                 <div class="news__text">
                   It’s nearly friday and we’re already planning
                   for the weekend… start with waffles
                 </div>
-
               </a>
-
               <a href="" class="news__item">
-
                 <div class="news__img">
                   <img src="img/new2.jpg" srcset="img/new2@2x.jpg 900w, img/new2@3x.jpg 1200w" alt="">
                 </div>
-
                 <div class="news__date">
                   7 JUN 2015
                 </div>
-
                 <div class="news__title">
                   Weekend plans
                 </div>
-
                 <div class="news__text">
                   It’s nearly friday and we’re already planning
                   for the weekend… start with waffles
                 </div>
-
               </a>
-
-
               <a href="" class="news__item">
-
                 <div class="news__img">
                   <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
                 </div>
-
                 <div class="news__date">
                   7 JUL 2015
                 </div>
-
                 <div class="news__title">
                   Weekend plans
                 </div>
-
                 <div class="news__text">
                   It’s nearly friday and we’re already planning
                   for the weekend… start with waffles
                 </div>
-
               </a>
-
               <a href="" class="news__item">
-
                 <div class="news__img">
                   <img src="img/new2.jpg" srcset="img/new2@2x.jpg 900w, img/new2@3x.jpg 1200w" alt="">
                 </div>
-
                 <div class="news__date">
                   7 JUL 2015
                 </div>
-
                 <div class="news__title">
                   Weekend plans
                 </div>
-
                 <div class="news__text">
                   It’s nearly friday and we’re already planning
                   for the weekend… start with waffles
                 </div>
-
               </a>
-
-
-
               <a href="" class="news__item">
-
                 <div class="news__img">
                   <img src="img/new1.jpg" srcset="img/new1@2x.jpg 900w, img/new1@3x.jpg 1200w" alt="">
                 </div>
-
                 <div class="news__date">
                   7 AUG 2015
                 </div>
-
                 <div class="news__title">
                   Weekend plans
                 </div>
-
                 <div class="news__text">
                   It’s nearly friday and we’re already planning
                   for the weekend… start with waffles
                 </div>
-
               </a>
-
               <a href="" class="news__item">
-
                 <div class="news__img">
                   <img src="img/new2.jpg" srcset="img/new2@2x.jpg 900w, img/new2@3x.jpg 1200w" alt="">
                 </div>
-
                 <div class="news__date">
                   7 AUG 2015
                 </div>
-
                 <div class="news__title">
                   Weekend plans
                 </div>
-
                 <div class="news__text">
                   It’s nearly friday and we’re already planning
                   for the weekend… start with waffles
                 </div>
-
               </a>
-
             </div>
           </div>
-
-
         </div>
-
       </div>
-
       <div class="news__btn">
         <div class="mainbtn">
           <a href="news.html">Все события</a>
-
         </div>
       </div>
-
-
-
     </section>
-
     <!-- contacts form -->
     <section class="contacts">
-
       <div class="container">
         <div class="main-title">
           Свяжитесь с нами
         </div>
-
         <form method="post" action="" enctype="multipart/form-data" class="contacts__form">
           <label>
             <span class="contacts__text">Оставьте ваш телефон чтобы мы перезвонили</span>
@@ -796,10 +625,8 @@
               class="contacts__field contacts__field--half contacts__field--phone contacts__field--phonemask phone-1"
               placeholder="8 900 123-45-56">
           </label>
-
           <div class="contacts__text contacts__text--icon">Или пишите нам, наши менеджеры свяжутся с вами в ближайшее
             время:</div>
-
           <input type="text" class="contacts__field contacts__field--half" placeholder="Имя">
           <input type="text" class="contacts__field contacts__field--half" placeholder="Ваш город">
           <input type="tel" class="contacts__field contacts__field--half contacts__field--phonemask phone-2"
@@ -809,7 +636,6 @@
           <input type="text" class="contacts__field contacts__field--half" placeholder="Бренд">
           <textarea name="" id="" cols="30" rows="3" class="contacts__field contacts__field--big"
             placeholder="Сообщение"></textarea>
-
           <div class="contacts__checking">
             <div class="contacts__personal">
               <label for="personal-checked" class="personal__checked">Согласие на обработку персональных данных</label>
@@ -820,32 +646,21 @@
             </div>
             <input type="submit" class="mainbtn mainbtn--blue contacts__btn" value="Отправить заявку">
           </div>
-
-
         </form>
       </div>
-
     </section>
-
   </div>
-
-
-
+  <!-- footer -->
   <footer class="footer">
-
     ICG Group 2019
-
   </footer>
-
+  <!-- scripts -->
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/jquery.maskedinput.js"></script>
   <script src="js/wiedemann.calendar.widget.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/index.js"></script>
-
   <script>
   </script>
 </body>
-
 </html>
